--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist && npm run -s og-image && npm run -s deck",
-    "deck": "marp --no-stdin PITCHME.md -o dist/index.html && cpy \"assets/**/*\" dist/assets",
+    "deck": "marp --html --no-stdin PITCHME.md -o dist/index.html && cpy \"assets/**/*\" dist/assets",
     "now-build": "npm run -s deck",
     "og-image": "marp PITCHME.md -o dist/og-image.jpg",
-    "start": "marp -ps ."
+    "start": "marp --html -ps ."
   },
   "devDependencies": {
     "@marp-team/marp-cli": "^1.1.1",
